# 0.15.0 (2020-XX-XX)

  * (variables) change --base-xy to --default-xy
  * (color) remove .color-{colorName} -> .{colorName}

# 0.14.0 (2020-12-01)

  * (position) add object-fit classes
  * (type) white-space
  * (type) overflow-wrap: break-word;
  * (color) add .color-{colorName} -> .{colorName}
  * (color) fix .color-currentColor -> .color-current

# 0.13.2 (2020-11-19)

  * (background) add .bg-current
  * (color) add .color-current
  * (variables) remove --link-color
  * (variables) --bold-font-weight to --bold-fw
  * (grid) add .min100vh, .min100vw
  * (grid) depreciate .minvh
  * (grid) add .maxw100, .maxh100
  * (grid) depreciate .maxw, .maxh
  * (grid) depreciate .grid[\d] as flexbox
  * (type) responsive .f[\d]
  * (type) responsive .lh[\d]

# 0.13.1 (2020-11-09)

  * (border) add .br999
  * (border) drop .br[6-8]
  * (variables) add --br[1-5]
  * (type) add .fw1000
  * (type) depreciate .normal
  * (padding) add 1.75rem padding
  * (modules) move .div from border to modules

# 0.13.0 (2020-10-01)

  * (spacing) split margin and padding
  * (spacing) depreciate
  * (margin) add .ma, .mt, .mb
  * (grid) add row-wrap, col-wrap, row-reverse-wrap, col-reverse-wrap,
    including responsivity
  * responsivity: drop (xs|sd|md|ld|xl)- prefixes in favor of (xs|sd|md|ld|xl):

# 0.12.2 (2020-09-01)

  * (grid) xl responsive classes

# 0.12.1 (2020-08-28)

  * (spacing) add more responsive paddings

# 0.12.0 (2020-08-20)

  * (grid) add: .max(22|26|66|68)
  * (spacing) added paddings of 1.25rem, 1.5rem, and 2.5rem
  * (variables) prefix some variables with base- and default-
    feature is non-breaking but it is recommended to use the new variables
  * (variables) change --text-color to --base-color
  * (border) change b-{color} to bc-{{color}}
  * (border) set border-color as a variable
  * (grid) drop webkit-fill-available from minvh
  * drop support for IE and dead browser versions
  * remove depreciated styles

# 0.11.1 (2020-05-26)

  * (grid) add: .max(28)