@@ -66,14 +66,11 @@
 .h0   { height: 0%; }
 .ha   { height: auto; }
 
-.min100vw { min-width: 100vh; }
-.minvh, /* depreciated */
-.min100vh { min-height: 100vh; }
+.minvw { min-width: 100vw; }
+.minvh { min-height: 100vh; }
 
-.maxw, /* depreciated */
-.maxw100 { max-width:  100%; }
-.maxh, /* depreciated */
-.maxh100 { max-height: 100%; }
+.maxw { max-width:  100%; }
+.maxh { max-height: 100%; }
 
 .row,
 .row-wrap { display: flex; flex-direction: row; }
